fixed carousel column data and shifting, need to fix matching card heights

--- a/src/app/components/Home-Content/Content.module_copy.css
+++ b/src/app/components/Home-Content/Content.module_copy.css
@@ -3,19 +3,15 @@
   display: grid;
   grid-gap: 0.5em;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  margin: 0 auto;
-}
-
-.cardLayout {
-  position: relative;
-  display: inline-grid;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
   margin: 0 auto;
 }
 
 @media (min-width: 1100px) {
   .contentLayout {
     grid-template-columns: repeat(3, 1fr);
-    width: 90%;
   }
 }
 @media (max-width: 1099px) and (min-width: 750px) {
@@ -45,6 +41,8 @@
 }
 
 .middleCard {
+  transform: scale(1.02) translateY(-20px) translateZ(0); /* Scale up the card */
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.6);
   z-index: 2; /* Ensure it stays above the other cards */
   transition: box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
 }
@@ -94,9 +92,9 @@
 }
 
 .card {
-  position: relative;
   display: inline-block;
   justify-content: center;
+  position: relative;
   border: 0.1px solid rgb(var(--foreground-rgb), 0.6);
   margin-bottom: 1em;
   margin: 0 2px 1em 2px;
@@ -105,7 +103,6 @@
   box-sizing: border-box;
   text-align: start;
   border-radius: 4px;
-  overflow: hidden;
   /* width: 416.666px; */
   /*width: 311.666px;*/
   /*height: 328.075px;*/
@@ -406,4 +403,4 @@
   border: 0.1px solid rgb(var(--foreground-rgb), 0.6);
 }
 
-/*# sourceMappingURL=Content.module.css.map */
+/*# sourceMappingURL=Content.module_copy.css.map */
